--- a/UserService/UserService.Bff/appsettings.Development.json
+++ b/UserService/UserService.Bff/appsettings.Development.json
@@ -4,5 +4,21 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "BFF": {
+    "Authority": "https://localhost:5001",
+    "ClientId": "bff_client",
+    "ClientSecret": "secret",
+
+    "Scopes": [ "openid", "profile", "api1", "offline_access" ],
+
+    "Apis": [
+      {
+        "LocalPath": "/api/instruments",
+        "RemoteUrl": "http://localhost:5057/instruments",
+        "RequiredToken": "User"
+      }
+    ]
   }
 }
