--- a/UserService/UserService.Business/UserService.Business.csproj
+++ b/UserService/UserService.Business/UserService.Business.csproj
@@ -7,11 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
-      <Folder Include="Extensions\" />
-    </ItemGroup>
-
-    <ItemGroup>
+        <PackageReference Include="Duende.IdentityServer" Version="7.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
     </ItemGroup>
