--- a/UserService/UserService.IdentityServer/UserService.IdentityServer.csproj
+++ b/UserService/UserService.IdentityServer/UserService.IdentityServer.csproj
@@ -10,6 +10,8 @@
         <PackageReference Include="Duende.IdentityServer.AspNetIdentity" version="7.2.0"/>
 
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11"/>
+
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3"/>
 
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11"/>
@@ -21,5 +23,6 @@
 
     <ItemGroup>
       <ProjectReference Include="..\UserService.Business\UserService.Business.csproj" />
+      <ProjectReference Include="..\UserService.DataAccess\UserService.DataAccess.csproj" />
     </ItemGroup>
 </Project>
