--- a/UserService/UserService.IdentityServer/appsettings.json
+++ b/UserService/UserService.IdentityServer/appsettings.json
@@ -12,6 +12,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=users_db;Username=postgres;Password=postgres"
   }
 }
