--- a/AnalyticsService/AnalyticsService.DataAccess/AnalyticsService.DataAccess.csproj
+++ b/AnalyticsService/AnalyticsService.DataAccess/AnalyticsService.DataAccess.csproj
@@ -19,4 +19,8 @@
       <ProjectReference Include="..\AnalyticsService.Business\AnalyticsService.Business.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Abstractions\" />
+    </ItemGroup>
+
 </Project>
