--- a/AnalyticsService/AnalyticsService.Business/AnalyticsService.Business.csproj
+++ b/AnalyticsService/AnalyticsService.Business/AnalyticsService.Business.csproj
@@ -19,4 +19,9 @@
         <ProjectReference Include="..\..\Shared\Shared.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\AnalyticsService.DataAccess\AnalyticsService.DataAccess.csproj" />
+    </ItemGroup>
+
+
 </Project>
