set abstractions and entities

--- a/AnalyticsService/AnalyticsService.DataAccess/AnalyticsService.DataAccess.csproj
+++ b/AnalyticsService/AnalyticsService.DataAccess/AnalyticsService.DataAccess.csproj
@@ -16,11 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AnalyticsService.Business\AnalyticsService.Business.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Abstractions\" />
+      <ProjectReference Include="..\..\Shared\Shared.csproj" />
     </ItemGroup>
 
 </Project>
