--- a/AnalyticsService/AnalyticsService.Business/AnalyticsService.Business.csproj
+++ b/AnalyticsService/AnalyticsService.Business/AnalyticsService.Business.csproj
@@ -9,10 +9,14 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="14.0.0"/>
+        <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="MassTransit" Version="8.5.0-develop.2304"/>
         <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1"/>
         <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1"/>
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.0-develop.2304"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
