--- a/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
+++ b/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Abstractions\" />
-      <Folder Include="Data\" />
-      <Folder Include="Entities\" />
-      <Folder Include="EntityTypeConfigurations\" />
-      <Folder Include="Extensions\" />
-      <Folder Include="Repositories\" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+      <PackageReference Include="Minio" Version="6.0.4" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
+      <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
     </ItemGroup>
 
 </Project>
