--- a/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
+++ b/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
       <PackageReference Include="Minio" Version="6.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
