--- a/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
+++ b/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
@@ -7,13 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Duende.IdentityModel" Version="7.1.0-preview.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+      <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.17" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.17" />
       <PackageReference Include="Minio" Version="6.0.4" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+      <PackageReference Include="Polly" Version="8.6.1" />
+      <PackageReference Include="Polly.Core" Version="8.6.1" />
     </ItemGroup>
 
 </Project>
