--- a/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
+++ b/InstrumentService/InstrumentService.DataAccess/InstrumentService.DataAccess.csproj
@@ -20,6 +20,7 @@
       <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
       <PackageReference Include="Polly" Version="8.6.1" />
       <PackageReference Include="Polly.Core" Version="8.6.1" />
+      <PackageReference Include="Scrutor" Version="6.1.0" />
     </ItemGroup>
 
 </Project>
