add configurations to appsettings

--- a/InstrumentService/InstrumentService.API/appsettings.Development.json
+++ b/InstrumentService/InstrumentService.API/appsettings.Development.json
@@ -1,4 +1,40 @@
 {
+  "InstrumentDbOptions": {
+    "ConnectionString": "mongodb://root:root@localhost:27017/InstrumentDb?authSource=admin",
+    "DatabaseName": "InstrumentDb",
+    "InstrumentsCollectionName": "Instruments",
+    "InstrumentFormMetadataCollectionName": "InstrumentFormMetadata",
+    "InstrumentTypesCollectionName": "InstrumentTypes"
+  },
+  "MinioOptions": {
+    "Host": "http://localhost:9000",
+    "Endpoint": "localhost:9000",
+    "BucketName": "instrument-photos",
+    "AccessKey": "minioadmin",
+    "SecretKey": "minioadmin"
+  },
+  "RedisOptions": {
+    "Configuration": "localhost:6379",
+    "TokenCacheOptions": {
+      "CacheKey": "AccessToken:ClientCredentials",
+      "ExpirationBufferSeconds": 60
+    }
+  },
+  "AuthOptions": {
+    "Authority": "https://localhost:5001",
+    "ValidAudience": "instrumentapi"
+  },
+  "ClientCredentialsOptions": {
+    "ClientId": "instrument_client",
+    "ClientSecret": "secret",
+    "Scope": "analyticsapi.read userapi.read"
+  },
+  "AnalyticsClientOptions": {
+    "BaseAddress": "http://localhost:5041"
+  },
+  "UserClientOptions": {
+    "BaseAddress": "http://localhost:5188" 
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
