--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,9 +68,28 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+  
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+    restart: unless-stopped
+
+  redisinsight:
+    image: redis/redisinsight:latest
+    container_name: redisinsight
+    ports:
+      - "8001:8001"
+    depends_on:
+      - redis
+    restart: unless-stopped
 
 volumes:
   users-db-data:
   analytics-db-data:
   instrument-db_data:
   minio-data:
+  redis-data:
