--- a/InstrumentService/InstrumentService.API/appsettings.Development.json
+++ b/InstrumentService/InstrumentService.API/appsettings.Development.json
@@ -33,7 +33,7 @@
     "BaseAddress": "http://localhost:5041"
   },
   "UserClientOptions": {
-    "BaseAddress": "http://localhost:5188" 
+    "BaseAddress": "https://localhost:5001" 
   },
   "Logging": {
     "LogLevel": {
