--- a/UserService/UserService.IdentityServer/UserService.IdentityServer.csproj
+++ b/UserService/UserService.IdentityServer/UserService.IdentityServer.csproj
@@ -11,8 +11,10 @@
 
         <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.11"/>
 
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.16" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="8.0.3"/>
+
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.17" />
 
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11"/>
