add auth config

--- a/UserService/UserService.IdentityServer/appsettings.json
+++ b/UserService/UserService.IdentityServer/appsettings.json
@@ -13,5 +13,9 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=users_db;Username=postgres;Password=postgres"
+  },
+  "AuthOptions": {
+    "Authority": "https://localhost:5001",
+    "ValidAudiences": [ "userapi" ]
   }
 }
