--- a/UserService/UserService.DataAccess/UserService.DataAccess.csproj
+++ b/UserService/UserService.DataAccess/UserService.DataAccess.csproj
@@ -14,8 +14,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
     </ItemGroup>
     
-    <ItemGroup>
-      <ProjectReference Include="..\UserService.Business\UserService.Business.csproj" />
-    </ItemGroup>
+<!--    <ItemGroup>-->
+<!--      <ProjectReference Include="..\UserService.Business\UserService.Business.csproj" />-->
+<!--    </ItemGroup>-->
 
 </Project>
