add requested scopes to config

--- a/UserService/UserService.Bff/appsettings.Development.json
+++ b/UserService/UserService.Bff/appsettings.Development.json
@@ -10,15 +10,6 @@
     "Authority": "https://localhost:5001",
     "ClientId": "bff_client",
     "ClientSecret": "secret",
-
-    "Scopes": [ "openid", "profile", "api1", "offline_access" ],
-
-    "Apis": [
-      {
-        "LocalPath": "/api/instruments",
-        "RemoteUrl": "http://localhost:5057/instruments",
-        "RequiredToken": "User"
-      }
-    ]
+    "Scopes": [ "openid", "profile", "roles", "instrumentapi.read", "instrumentapi.write"]
   }
 }
