--- a/AnalyticsService/AnalyticsService.API/appsettings.Development.json
+++ b/AnalyticsService/AnalyticsService.API/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=analytics_db;Username=postgres;Password=postgres"
+  },
+  
+  "AuthOptions": {
+    "Authority": "https://localhost:5001",
+    "ValidAudiences": [ "analyticsapi" ]
   }
 }
