--- a/react-client/package.json
+++ b/react-client/package.json
@@ -39,6 +39,8 @@
     "jest": "^30.0.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.38.0",
     "vite": "^7.0.4"
   },
   "lint-staged": {
