--- a/react-client/package.json
+++ b/react-client/package.json
@@ -17,8 +17,12 @@
     "@typescript-eslint/parser": "^8.38.0",
     "axios": "^1.10.0",
     "formik": "^2.4.6",
+    "i18next": "^25.3.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.1",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
     "yup": "^1.6.1",
